绑定流程优化

--- a/app/src/main/res/layout/activity_config_wifi.xml
+++ b/app/src/main/res/layout/activity_config_wifi.xml
@@ -1,14 +1,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:hunt="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/lLayout_config_ap"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_white"
     android:clickable="true"
     android:keepScreenOn="true"
-    android:orientation="vertical"
-    tools:context=".n.view.bind.ConfigApFragment">
+    android:orientation="vertical">
 
     <Space
         android:layout_width="@dimen/x1"
