--- a/app/src/main/res/layout/fragment_home_page_list_ext.xml
+++ b/app/src/main/res/layout/fragment_home_page_list_ext.xml
@@ -71,7 +71,8 @@
         <FrameLayout
             android:id="@+id/fLayout_empty_view_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@android:color/white">
 
             <LinearLayout
                 android:layout_width="match_parent"
