--- a/app/src/main/res/layout/wonder_indicaror_item.xml
+++ b/app/src/main/res/layout/wonder_indicaror_item.xml
@@ -1,10 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/wonder_indicator_item"
-    android:layout_width="@dimen/x27"
-    android:layout_height="@dimen/x27"
-    android:background="@drawable/wonder_indicator_selector"
-    android:gravity="center"
-    android:textColor="@color/color_wonder_indicator"
-    android:textSize="14sp"
-    android:textStyle="bold" />
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="13dp"
+        android:textSize="16sp"
+        android:visibility="invisible" />
+
+    <TextView
+        android:id="@+id/wonder_indicator_item"
+        android:layout_width="@dimen/x27"
+        android:layout_height="@dimen/x27"
+        android:background="@drawable/wonder_indicator_selector"
+        android:gravity="center"
+        android:textColor="@color/color_wonder_indicator"
+        android:textSize="14sp"
+        android:textStyle="bold" />
+</LinearLayout>
