--- a/app/src/main/res/layout/wonder_time_indicator.xml
+++ b/app/src/main/res/layout/wonder_time_indicator.xml
@@ -11,27 +11,20 @@
         android:layout_height="@dimen/y1"
         android:background="@color/color_dde0e5" />
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/wonder_item_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="13dp"
+        android:textColor="#333333"
+        android:textSize="16sp"
+        android:textStyle="bold" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/wonder_item_indicator_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/wonder_item_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="13dp"
-            android:textColor="#333333"
-            android:textSize="16sp"
-            android:textStyle="bold" />
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/wonder_item_indicator_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:overScrollMode="never"
-            android:padding="0dp" />
-    </LinearLayout>
+        android:overScrollMode="never" />
 </FrameLayout>
