--- a/app/src/main/res/layout/fragment_mine_info_set_pwd.xml
+++ b/app/src/main/res/layout/fragment_mine_info_set_pwd.xml
@@ -7,49 +7,6 @@
     android:layout_height="match_parent"
     android:background="@color/color_white">
 
-    <!--<FrameLayout-->
-    <!--android:background="@color/color_0ba8cf"-->
-    <!--android:id="@+id/rl_tab_bar_container"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content">-->
-
-    <!--<RelativeLayout-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content">-->
-
-    <!--<ImageView-->
-    <!--android:id="@+id/iv_mine_set_newpwd_back"-->
-    <!--android:clickable="true"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_centerVertical="true"-->
-    <!--android:padding="@dimen/x15"-->
-    <!--android:src="@drawable/nav_tab_back_selector" />-->
-
-    <!--<TextView-->
-    <!--android:layout_toRightOf="@id/iv_mine_set_newpwd_back"-->
-    <!--android:id="@+id/tv_top_title"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="@dimen/y48"-->
-    <!--android:text="@string/SET_PWD"-->
-    <!--android:textSize="@dimen/sp18"-->
-    <!--android:gravity="center_vertical"-->
-    <!--android:textColor="@color/color_white" />-->
-
-    <!--<ImageView-->
-    <!--android:visibility="visible"-->
-    <!--android:id="@+id/iv_mine_info_set_newpwd_able"-->
-    <!--android:padding="@dimen/x15"-->
-    <!--android:layout_alignParentRight="true"-->
-    <!--android:clickable="true"-->
-    <!--android:layout_centerVertical="true"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:src="@drawable/icon_finish_disable" />-->
-
-    <!--</RelativeLayout>-->
-    <!--</FrameLayout>-->
-
     <com.cylan.jiafeigou.widget.CustomToolbar
         layout="@layout/layout_default_custom_tool_bar"
         android:id="@+id/custom_toolbar"
@@ -58,6 +15,7 @@
         hunt:ct_background_color="@color/color_0ba8cf"
         hunt:ct_enable_shadow="false"
         hunt:ct_fit_system_window="true"
+        hunt:ct_enable_theme="true"
         hunt:ct_icon="@drawable/nav_icon_back_white"
         hunt:ct_icon_right="@drawable/icon_finish_disable"
         hunt:ct_left_title="@string/SET_PWD"
