--- a/app/src/main/res/layout/layout_settings_item1.xml
+++ b/app/src/main/res/layout/layout_settings_item1.xml
@@ -14,7 +14,7 @@
         android:textColor="@color/color_black"
         android:textSize="@dimen/sp16" />
 
-    <com.cylan.jiafeigou.widget.SafeCheckBox
+    <com.cylan.jiafeigou.widget.SafeSwitchButton
         android:id="@+id/btn_item_switch"
         style="@style/SwitchButtonStyleMD"
         android:layout_width="wrap_content"
