--- a/app/src/main/res/anim/loading_progress_rotate.xml
+++ b/app/src/main/res/anim/loading_progress_rotate.xml
@@ -9,6 +9,5 @@
         android:duration="1000"
         android:repeatCount="-1"
         android:drawable="@drawable/listview_loading"
-        android:visible="true"></rotate>
-
+        android:visible="true"/>
 </rotate>
