--- a/app/src/main/res/anim/loading_progress_rotate.xml
+++ b/app/src/main/res/anim/loading_progress_rotate.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<rotate xmlns:android="http://schemas.android.com/apk/res/android">
+<set xmlns:android="http://schemas.android.com/apk/res/android">
     <rotate
         android:fromDegrees="0"
         android:interpolator="@android:anim/linear_interpolator"
@@ -10,4 +10,4 @@
         android:repeatCount="-1"
         android:drawable="@drawable/listview_loading"
         android:visible="true"/>
-</rotate>
+</set>
