--- a/app/src/main/res/layout/fragment_mine_friends_request_add_items.xml
+++ b/app/src/main/res/layout/fragment_mine_friends_request_add_items.xml
@@ -20,48 +20,56 @@
                 android:layout_width="@dimen/x50"
                 android:layout_height="@dimen/y50" />
 
-            <RelativeLayout
+            <LinearLayout
+                android:orientation="horizontal"
                 android:gravity="center_vertical"
                 android:layout_toRightOf="@id/iv_userhead"
                 android:paddingLeft="@dimen/x15"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/y67">
 
-                <TextView
-                    android:id="@+id/tv_username"
-                    android:textSize="@dimen/sp16"
-                    android:textColor="@color/color_333333"
-                    android:text="小名"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                <RelativeLayout
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/tv_username"
+                        android:textSize="@dimen/sp16"
+                        android:textColor="@color/color_333333"
+                        android:text="小名"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:id="@+id/tv_add_message"
+                        android:paddingTop="@dimen/y8"
+                        android:layout_below="@id/tv_username"
+                        android:textSize="@dimen/sp12"
+                        android:textColor="@color/color_8c8c8c"
+                        android:text="我是小姨"
+                        android:maxLength="20"
+                        android:singleLine="true"
+                        android:ellipsize="end"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </RelativeLayout>
 
                 <TextView
-                    android:id="@+id/tv_add_message"
-                    android:paddingTop="@dimen/y8"
-                    android:layout_below="@id/tv_username"
-                    android:textSize="@dimen/sp12"
-                    android:textColor="@color/color_8c8c8c"
-                    android:text="我是小姨"
-                    android:singleLine="true"
-                    android:ellipsize="end"
+                    android:id="@+id/tv_accept_request"
+                    android:layout_marginRight="@dimen/x15"
+                    android:gravity="center"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:background="@drawable/btn_accept_add_request_shape"
+                    android:text="@string/Tap3_FriendsAdd_Agree"
+                    android:textSize="@dimen/sp13"
+                    android:textColor="@color/color_4b9fd5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
-            </RelativeLayout>
+            </LinearLayout>
 
         </RelativeLayout>
-
-        <TextView
-            android:id="@+id/tv_accept_request"
-            android:layout_marginRight="@dimen/x15"
-            android:gravity="center"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:background="@drawable/btn_accept_add_request_shape"
-            android:text="@string/Tap3_FriendsAdd_Agree"
-            android:textSize="@dimen/sp13"
-            android:textColor="@color/color_4b9fd5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
 
         <View
             android:layout_alignParentBottom="true"
@@ -69,7 +77,6 @@
             android:background="@color/color_f2f2f2"
             android:layout_width="match_parent"
             android:layout_height="@dimen/y1" />
-
     </RelativeLayout>
 
 </LinearLayout>
