--- a/app/src/main/res/layout/fragment_home_wonderful_ext.xml
+++ b/app/src/main/res/layout/fragment_home_wonderful_ext.xml
@@ -1,8 +1,7 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:clipChildren="true">
+    android:layout_height="match_parent">
 
 
     <android.support.design.widget.AppBarLayout
@@ -10,7 +9,6 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/y163"
         android:background="@drawable/wonderful_bg_top_daytime"
-        android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.PopupOverlay"
         app:statusBarScrim="@android:color/transparent">
 
@@ -18,7 +16,7 @@
             android:id="@+id/rl_top_head_wonder"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:minHeight="@dimen/y48"
+            android:minHeight="@dimen/y62"
             app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlways">
 
             <TextView
