--- a/app/src/main/res/layout/activity_album_select.xml
+++ b/app/src/main/res/layout/activity_album_select.xml
@@ -1,34 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:hunt="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layout_album_select"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:id="@+id/rl_home_mine_select_gallery"
+    <com.cylan.jiafeigou.widget.CustomToolbar
+        android:id="@+id/custom_toolbar"
+        layout="@layout/layout_default_custom_tool_bar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/y73"
-        android:background="#0BA8CF">
-
-        <ImageView
-            android:id="@+id/iv_home_mine_relativesandfriends_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:clickable="true"
-            android:padding="@dimen/x15"
-            android:src="@drawable/nav_tab_back_selector" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="@dimen/y12"
-            android:layout_marginLeft="@dimen/x48"
-            android:text="选择相册"
-            android:textColor="#ffffff"
-            android:textSize="18sp" />
-    </RelativeLayout>
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/sp18"
+        hunt:ct_background_color="@color/color_0ba8cf"
+        hunt:ct_enable_theme="true"
+        hunt:ct_icon="@drawable/nav_icon_back_white"
+        hunt:ct_left_title="选择相册"
+        hunt:ct_left_title_color="@color/color_white" />
 
     <ProgressBar
         android:id="@+id/progress_bar_album_select"
@@ -47,7 +34,7 @@
         android:id="@+id/grid_view_album_select"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/rl_home_mine_select_gallery"
+        android:layout_below="@id/custom_toolbar"
         android:paddingBottom="@dimen/y1"
         android:paddingLeft="@dimen/x1"
         android:paddingRight="@dimen/x1"
