--- a/app/src/main/res/layout/fragment_dialog_edit_name.xml
+++ b/app/src/main/res/layout/fragment_dialog_edit_name.xml
@@ -37,6 +37,7 @@
                     android:layout_height="wrap_content"
                     android:background="@null"
                     android:hint="@string/DEViCE_NAME"
+                    android:inputType="text"
                     android:lines="1"
                     android:maxLength="12"
                     android:maxLines="1"
