--- a/app/src/main/res/layout/fragment_dialog_edit_name.xml
+++ b/app/src/main/res/layout/fragment_dialog_edit_name.xml
@@ -35,6 +35,7 @@
                     android:id="@+id/et_input_box"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_toStartOf="@+id/et_input_box_clear"
                     android:background="@null"
                     android:hint="@string/DEViCE_NAME"
                     android:inputType="text"
