--- a/app/src/main/res/layout/cam_live_port_handle_bar.xml
+++ b/app/src/main/res/layout/cam_live_port_handle_bar.xml
@@ -11,7 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:paddingLeft="@dimen/x15"
-        android:paddingRight="@dimen/x15" />
+        android:paddingRight="@dimen/x15"
+        android:visibility="invisible" />
 
     <com.cylan.jiafeigou.widget.LiveTimeLayout
         android:id="@+id/live_time_layout"
