--- a/app/src/main/res/layout/fragment_cam_message_list.xml
+++ b/app/src/main/res/layout/fragment_cam_message_list.xml
@@ -113,10 +113,11 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="end"
+            android:enabled="false"
             android:gravity="center_vertical"
             android:paddingEnd="@dimen/x28"
             android:paddingStart="@dimen/x28"
             android:text="@string/DELETE"
-            android:textColor="@color/color_4b9fd5" />
+            android:textColor="@color/common_btn_color_state" />
     </FrameLayout>
 </RelativeLayout>
