--- a/app/src/main/res/layout/layout_cam_live_control_layer.xml
+++ b/app/src/main/res/layout/layout_cam_live_control_layer.xml
@@ -63,6 +63,7 @@
                     hunt:sw_textColor="@color/color_FFAAAAAA" />
 
                 <LinearLayout
+                    android:visibility="invisible"
                     android:id="@+id/tv_cam_live_land_bottom"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
