--- a/app/src/main/res/layout/activity_album_select.xml
+++ b/app/src/main/res/layout/activity_album_select.xml
@@ -14,7 +14,7 @@
         hunt:ct_background_color="@color/color_0ba8cf"
         hunt:ct_enable_theme="true"
         hunt:ct_icon="@drawable/nav_icon_back_white"
-        hunt:ct_left_title="选择相册"
+        hunt:ct_left_title="@string/Choose_Album"
         hunt:ct_left_title_color="@color/color_white" />
 
     <ProgressBar
