bug修改和优化

--- a/app/src/main/res/layout/fragment_forget_pwd_get_code.xml
+++ b/app/src/main/res/layout/fragment_forget_pwd_get_code.xml
@@ -39,7 +39,7 @@
                         android:focusable="true"
                         android:focusableInTouchMode="true"
                         android:gravity="center"
-                        android:hint="@string/Tap0_enterphoneoremail"
+                        android:hint="@string/PHONE_EMAIL"
                         android:maxLength="65"
                         android:singleLine="true"
                         android:paddingLeft="2dp"
