--- a/app/src/main/res/layout/fragment_mine_add_from_contact.xml
+++ b/app/src/main/res/layout/fragment_mine_add_from_contact.xml
@@ -41,6 +41,8 @@
                 android:background="@null"
                 android:hint="验证消息"
                 android:maxLength="40"
+                android:maxLines="1"
+                android:inputType="text"
                 android:textColor="@color/color_333333"
                 android:textSize="@dimen/sp16" />
 
