门铃未读数优化

--- a/app/src/main/res/layout/mine_share_to_contract_toolbar.xml
+++ b/app/src/main/res/layout/mine_share_to_contract_toolbar.xml
@@ -22,7 +22,8 @@
 
             <FrameLayout
                 android:layout_toRightOf="@id/iv_mine_share_to_contact_back"
-                android:layout_width="wrap_content"
+                android:layout_toLeftOf="@+id/iv_mine_share_to_contact_search"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <TextView
