--- a/app/src/main/res/layout/fragment_normal_big_pic.xml
+++ b/app/src/main/res/layout/fragment_normal_big_pic.xml
@@ -15,4 +15,12 @@
         android:scaleType="fitCenter"
         android:transitionName="picDetailsFragment"
         tools:ignore="ContentDescription,UnusedAttribute" />
+
+    <ImageView
+        android:id="@+id/imv_back"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:padding="10dp"
+        android:src="@drawable/nav_icon_back_white"
+        android:visibility="gone" />
 </FrameLayout>
